Alerta del saludo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Actividad 7.1</title>
 </head>
 <body>
-    <button>Saludar</button>
+    <button onclick="mostrarAlerta()">Saludar</button>
 </body>
 </html>
