--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Actividad 7.1</title>
+    <script src="eventos.js"></script>
 </head>
 <body>
+    <div style="padding: 5px; background-color: green;" id="divbutton">
     <button onclick="mostrarAlerta()">Saludar</button>
+    </div>
 </body>
 </html>
