--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="padding: 5px; background-color: green;" id="divbutton">
-    <button onclick="mostrarAlerta()">Saludar</button>
+    <button id="button">Saludar</button>
     </div>
 </body>
 </html>
